# simple-registry

./: .gitignore  Cargo.toml  Dockerfile  README.md  build.rs  config.example.toml  renovate.json
.github/workflows/: build.yaml  conformance.yaml  docs.yaml  rust.yml
conformance/: config-fs-sync.toml  config-fs.toml  config-s3.toml  conformance-variables
contrib/docker-compose/: config.toml  docker-compose.yaml
doc/: configuration-reference.md  configure-access-control-policies.md  configure-immutable-tags.md  configure-mtls.md  configure-pull-through-cache.md  configure-retention-policies.md  configure-webhook-authorization.md  deploy-docker-compose.md  deploy-kubernetes-kustomize.md  index.md  oidc-authentication.md  web-ui.md
doc/adr/: 0001-oidc-authentication.md  0002-webhook-authorization.md
doc/explanation/: architecture.md  authentication-authorization.md  pull-through-caching.md  security-model.md  storage-backends.md
doc/how-to/: configure-generic-oidc.md  configure-github-actions-oidc.md  configure-mtls.md  configure-retention-policies.md  configure-webhook-authorization.md  deploy-docker-compose.md  deploy-kubernetes.md  enable-web-ui.md  protect-tags-immutability.md  run-storage-maintenance.md  set-up-access-control.md  troubleshoot-common-issues.md
doc/reference/: api-endpoints.md  cel-expressions.md  cli.md  configuration.md  metrics.md  ui.md
doc/tutorials/: mirror-docker-hub.md  quickstart.md  your-first-private-registry.md
src/: config.rs  error.rs  http_helpers.rs  identity.rs  io_helpers.rs  main.rs  metrics_provider.rs  scrub.rs  secret.rs  storage_helper.rs  tls.rs  tracing_helper.rs  watcher.rs
src/cache/: config.rs  error.rs  memory.rs  memory_cache.rs  mod.rs  redis.rs  redis_cache.rs
src/cache/serializing_cache/: mod.rs  tests.rs
src/cmd/: error.rs  mod.rs  scrub.rs
src/cmd/server/: handlers.rs  insecure_listener.rs  mod.rs  params.rs  tls_listener.rs
src/command/: argon.rs  error.rs  mod.rs  scrub.rs  server.rs
src/command/argon/: error.rs  mod.rs
src/command/scrub/: command.rs  error.rs  mod.rs  retention_policy.rs  scrubber.rs
src/command/server/: client_identity.rs  command.rs  error.rs  handlers.rs  http_server.rs  insecure_listener.rs  mod.rs  params.rs  request_ext.rs  response.rs  response_body.rs  route.rs  router.rs  server_context.rs  sha256_hash_string.rs  tls_listener.rs  ui.rs
src/configuration/: data_size.rs  error.rs  mod.rs  registry.rs  watcher.rs
src/e2e/: basic_auth_push.rs  mod.rs  util.rs
src/http/: request.rs  response.rs
src/identity/: client_identity.rs  mod.rs  route.rs
src/lock_manager/: memory.rs  mod.rs  redis.rs
src/oci/: descriptor.rs  digest.rs  error.rs  link_reference.rs  manifest.rs  mod.rs  namespace.rs  reference.rs
src/policy/: access_policy.rs  cel.rs  client_action.rs  client_identity.rs  client_request.rs  manifest_image.rs  mod.rs  retention_policy.rs
src/registry/: access_policy.rs  blob.rs  cel.rs  content_discovery.rs  error.rs  ext.rs  http_client.rs  link_reference.rs  manifest.rs  mod.rs  notifying_reader.rs  pagination.rs  path_builder.rs  policy.rs  repository.rs  repository_upstream.rs  response.rs  retention_policy.rs  scrub.rs  task_queue.rs  tests.rs  upload.rs  version.rs
src/registry/api/: blob.rs  body.rs  content_discovery.rs  manifest.rs  mod.rs  upload.rs  version.rs
src/registry/auth/: basic_auth.rs  mod.rs  mtls.rs
src/registry/blob_store/: config.rs  error.rs  fs_backend.rs  hashing_reader.rs  mod.rs  s3_backend.rs  sha256_ext.rs
src/registry/cache/: config.rs  error.rs  memory.rs  mod.rs  redis.rs
src/registry/cache_store/: error.rs  memory_backend.rs  mod.rs  redis_backend.rs
src/registry/client/: authentication_scheme.rs  bearer_token.rs  mod.rs  tests.rs
src/registry/data_store/: data_path_builder.rs  error.rs  fs.rs  fs_backend.rs  mod.rs  s3.rs  s3_backend.rs
src/registry/http_client/: mod.rs
src/registry/lock_store/: error.rs  memory_backend.rs  mod.rs  redis_backend.rs
src/registry/metadata_store/: config.rs  error.rs  fs_backend.rs  link.rs  link_kind.rs  link_metadata.rs  mod.rs  s3_backend.rs
src/registry/oci/: descriptor.rs  digest.rs  manifest.rs  reference.rs
src/registry/oci_types/: descriptor.rs  digest.rs  manifest.rs  mod.rs  reference.rs
src/registry/oidc/: generic.rs  github.rs  mod.rs
src/registry/policy_types/: client_identity.rs  client_request.rs  mod.rs
src/registry/reader/: chunked_reader.rs  mod.rs
src/registry/repository/: access_policy.rs  authentication_scheme.rs  bearer_token.rs  mod.rs  repository_upstream.rs  retention_policy.rs
src/registry/server/: client_identity.rs  http_server.rs  mod.rs  request_ext.rs  response_body.rs  response_ext.rs  route.rs  router.rs  server_context.rs  token_handler.rs
src/registry/utils/: blob_link.rs  blob_metadata.rs  data_link.rs  data_path_builder.rs  hashing_reader.rs  mod.rs  notifying_reader.rs  path_builder.rs  repository.rs  repository_upstream.rs  request_ext.rs  response_ext.rs  sha256_ext.rs  task_queue.rs  tee_reader.rs
src/shared_lock/: memory.rs  mod.rs  redis.rs
src/storage/: entity_link.rs  entity_path_builder.rs  filesystem.rs  mod.rs  reference.rs  s3.rs  tree_manager.rs
src/storage/backend/: filesystem.rs  s3.rs
src/storage/disk_engine/: mod.rs  upload_writer.rs
src/storage/filesystem/: mod.rs  (+1 more)
tls.d/: build-test-tls.sh
ui/: package-lock.json  package.json  svelte.config.js
ui/src/: app.css  app.html
website/: docusaurus.config.ts  package-lock.json  package.json  sidebars.ts
(+132 files in other folders)
