[package]
name = "simple-registry"
version = "0.1.0"
edition = "2021"

[profile.release]
opt-level = 3
codegen-units = 1
lto = "fat"

[dependencies]
arc-swap = "1.7"
argh = "0.1"
argon2 = "0.5"
async-trait = "0.1"
aws-sdk-s3 = { version = "1.104" }
base64 = "0.22"
bytes = "1.10"
bytesize = { version = "2.0", features = ["serde"] }
cel-interpreter = "0.10"
chrono = { version = "0.4", features = ["serde"] }
crossbeam-channel = "0.5"
futures-util = { version = "0.3", default-features = false }
hex = "0.4"
http-body-util = "0.1"
humantime = "2.2"
hyper = { version = "1.7" , features = ["full"]}
hyper-rustls = "0.27"
hyper-util = { version = "0.1", features = ["tokio", "server-graceful"] }
jsonwebtoken = "9.3"
notify = "8.2"
opentelemetry = "0.30"
opentelemetry_sdk = { version = "0.30", features = ["rt-tokio", "metrics"] }
opentelemetry-otlp = { version = "0.30" , features = ["grpc-tonic"]}
opentelemetry-semantic-conventions = { version = "0.30", features = ["semconv_experimental"] }
opentelemetry-stdout = "0.30"
prometheus = "0.14"
redis = { version = "0.32", features = ["tokio-comp"] }
regex = "1.11"
rpassword = "7.4"
rustls = { version = "0.23", features = ["aws-lc-rs"] }
rustls-native-certs = "0.8"
rustls-pki-types = "1.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_urlencoded = "0.7"
sha2 = "0.11.0-rc.2"
tempfile = "3.21"
tokio = { version = "1.47", features = ["full", "tracing"] }
tokio-rustls = "0.26"
tokio-util = { version = "0.7", features = ["io-util"] }
toml = "0.9"
tracing = "0.1"
tracing-opentelemetry = "0.31"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
uuid = { version = "1.18", features = ["v4", "serde"] }
x509-parser = "0.18"

[dev-dependencies]
mockall = "0.13"
